<resources>
    <string name="app_name">Deller Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_item">হোম</string>
    <string name="transaction_item">লেনদেন লিস্ট</string>
    <string name="due_item">বাকি লিস্ট</string>
    <string name="help_item">হেল্প</string>
    <string name="profile">প্রোফাইল</string>
    <string name="users">ইউজারস</string>
    <string name="customers">কাস্টমারস</string>
    <string name="product_setting">প্রোডাক্ট সেটিংস</string>
    <string name="logout">লগ আউট</string>
    <string name="delivery">প্রোডাক্ট হোল্ড/ডেলিভারি</string>
    <string name="product_out">প্রোডাক্ট আউট/বিক্রয়</string>
    <string name="product_in">প্রোডাক্ট ইন/ক্রয়</string>
    <string name="unit">ইউনিট</string>
    <string name="brand">ব্রান্ড</string>
    <string name="category">ক্যাটাগরি</string>
</resources>