<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/person"/>
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/users"
            android:icon="@drawable/users"/>
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/customers"
            android:icon="@drawable/users"/>
        <item
            android:title="@string/product_setting"
            android:id="@+id/product_setting">
            <menu>
                <group>
                    <item
                        android:title="@string/unit"
                        android:icon="@drawable/arrow"/>
                    <item
                        android:title="@string/brand"
                        android:icon="@drawable/arrow"/>
                    <item
                        android:title="@string/category"
                        android:icon="@drawable/arrow"/>
                </group>
            </menu>
        </item>
        <item
            android:title="@string/product_in"
            android:icon="@drawable/product"/>
        <item
            android:title="@string/product_out"
            android:icon="@drawable/product"/>
        <item
            android:title="@string/delivery"
            android:icon="@drawable/product"/>
        <item
            android:title="@string/due_item"
            android:icon="@drawable/calculate"/>
        <item
            android:title="@string/transaction_item"
            android:icon="@drawable/transaction"/>
        <item
            android:title="@string/logout"
            android:icon="@drawable/logout"/>
    </group>
</menu>